LWC compatibility for enhanced ack api
- Added @AuraEnabled annotations to DetailedAckResult class properties for proper LWC serialization
- Added @AuraEnabled annotations to OpportunityResult class properties for completeness
- Updated LWC component to use sendAcknowledgementsDetailed method with enhanced error handling
- Updated LWC tests to mock and validate the new detailed API method
- Enhanced LWC toast messaging with contextual titles and variants based on results

--- a/force-app/main/default/classes/DonationAcknowledgementService.cls
+++ b/force-app/main/default/classes/DonationAcknowledgementService.cls
@@ -60,11 +60,17 @@ public with sharing class DonationAcknowledgementService {
   // Individual opportunity result with detailed tracking
   @TestVisible
   public class OpportunityResult {
+    @AuraEnabled
     public Id opportunityId;
+    @AuraEnabled
     public String opportunityName;
+    @AuraEnabled
     public AckStatus status;
+    @AuraEnabled
     public String reason;
+    @AuraEnabled
     public String contactEmail;
+    @AuraEnabled
     public Date acknowledgmentDate;
 
     public OpportunityResult(Id oppId, String oppName) {
@@ -96,12 +102,19 @@ public with sharing class DonationAcknowledgementService {
   // Detailed acknowledgement result with individual opportunity tracking
   @TestVisible
   public class DetailedAckResult {
+    @AuraEnabled
     public Integer totalOpportunities;
+    @AuraEnabled
     public Integer emailsSent;
+    @AuraEnabled
     public Integer alreadyAcknowledged;
+    @AuraEnabled
     public Integer noValidContact;
+    @AuraEnabled
     public Integer emailSendFailures;
+    @AuraEnabled
     public List<OpportunityResult> opportunityResults;
+    @AuraEnabled
     public String emailType;
 
     public DetailedAckResult() {
